Update HNet posts

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -240,14 +240,14 @@ I think Hourglass is an aesthetically pleasing name, and also elegantly describe
 I thought about calling our model the **Hourglass Network** (shortened to H-Net), and the inner dynamic chunking module the **TickTok** layer.
 I really liked this name because there are several layers of meaning to it:
 1. Hourglass still refers to the shape of the hierarchical network. (Calling it "Network" also differentiated from the Hourglass Transformer, I suppose, since one of our important details was using SSMs in the outer layers.)
-2. The network structure could be viewed as *multi-rate sequence modeling* involving modalities that **tick** at different rates, such as *characters vs. words*, or *audio vs. phonemes*. The **Tick**Tok layer would be the interface between these modalities.
+2. The network structure could be viewed as *multi-rate sequence modeling* involving modalities or streams of data that **tick** at different rates, such as *characters vs. words*, or *audio vs. phonemes*. The **Tick**Tok layer would be the interface between these modalities.
 3. The network could also be viewed as performing a form of dynamic **tok**enization that compresses contiguous inputs just as tokenizers do. The Tick**Tok** layer would again be the mechanism that performs this compression. (*Dynamic tokenization*, instead of dynamic chunking, was also the working name for this project for a long time.)
 4. Finally, there's a **time**-related theme to all of it: *Hourglass* Networks would be defined as models that have *temporally-dynamic* downsampling rates, where the core mechanism is the *"tick tock"* layer.
 
 Unfortunately, I was a bit concerned about the name "Hourglass" being confused for parallel lineages of work;
 it's also been used by plenty of other [unrelated](https://arxiv.org/abs/1603.06937) [models](https://arxiv.org/abs/2401.11605).
-I also felt that "TickTok" might be a little too cheesy;
-and the "tick tock"/TikTok name is also of course a well-recognized brand that might be confusing, and the idea has also already been used by a [very popular tokenizer](https://github.com/openai/tiktoken).
+"TickTok" might also have been a little cheesy;
+and the TikTok name is also of course a well-recognized brand that might be confusing, and has also already been used by a [very popular tokenizer](https://github.com/openai/tiktoken).
 So we didn't go with it. Alas 🥲
 
 (I still liked the H-Net name, so we kept it and later "backronymed" it to Hierarchical Network. In my head I still like the name H-Net for this Hourglass connection though.)
