Update HNet past/future posts

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -41,7 +41,7 @@ toc:
 ---
 
 The [H-Net] model has been a dream of mine for years.
-I've been fortunate enough to be able to work with my student [Sukjun](https://sukjunhwang.github.io/) who made all the technical breakthroughs behind this model, solving (or at least making serious progress towards) what I consider to be a very difficult but foundational problem for deep learning.
+I've been fortunate enough to be able to work with my student [Sukjun](https://sukjunhwang.github.io/) who made the technical breakthroughs behind this model, solving (or at least making serious progress towards) what I consider to be a very difficult but foundational problem for deep learning.
 
 In this post, I provide an informal personal recounting of the motivation and history of this project, providing various context and discussion that wouldn't make sense in a paper.
 This post is really just for fun -- I've always found it interesting to read about the windy history of research instead of just the streamlined final result, and I felt like telling this story.
@@ -55,7 +55,7 @@ The idea of hierarchy has always resonated with me.
 Perhaps its comes from my penchant for discrete math and roots in competitive programming, where I spent all day working with algorithms on trees, the canonical hierarchical structure.
 Perhaps it reflects the way I tend to think; I structure almost everything hierarchically, for example using bulleted outlines for everything to a perhaps excessive degree (I'd write papers in outline format if I could!).
 
-At some point early in my PhD, when I wasn't doing much, I took an online class for fun on [Learning How to Learn](https://www.coursera.org/learn/learning-how-to-learn).
+At some point early in my PhD, when I wasn't doing much productive work, I took an online class for fun on [Learning How to Learn](https://www.coursera.org/learn/learning-how-to-learn).
 I think this is where I came across the concept of [chunking](https://en.wikipedia.org/wiki/Chunking_(psychology)) in human cognition,
 which really resonated with me and felt fundamental to intelligence.
 For example, our processing is strongly hierarchical: language is parsed into words, phrases, clauses, sentences, and beyond;
@@ -70,7 +70,7 @@ The *chunking* concept seems really important to me, and later became adopted fo
 From the very beginning of my work on sequence models, I was drawn to hierarchical models.
 
 My first exposure to sequence models came during an internship in 2019 at DeepMind under the amazing [Caglar Gulcehre] and [Nando de Freitas].
-I started thinking about RNNs with help from Caglar, who was an encyclopedia of classical sequence models (e.g. on the original [GRU](https://arxiv.org/abs/1412.3555) paper <d-cite key="chung2014empirical"></d-cite>) and pointed me to a lot of interesting ideas.
+I started thinking about RNNs with help from Caglar, who was an encyclopedia of classical sequence models (e.g. he was on the original [GRU](https://arxiv.org/abs/1412.3555) paper <d-cite key="chung2014empirical"></d-cite>) and pointed me to a lot of interesting ideas.
 
 I was particularly interested in the notion of improving long-range dependencies through hierarchies.
 This had been attempted in many flavors of RNNs, such as the Clockwork RNN <d-cite key="koutnik2014clockwork"></d-cite>,
@@ -113,7 +113,7 @@ But no matter what I did, the hierarchical version was always *noticeably worse*
 
 I eventually gave up on this, and I think it formed the basis for some of my intuition around language modeling.
 In particular, I realized that fixed-width pooling just didn't make sense for language.
-(And moreover, I realized that this is essentially the same as convolutions, or at least has the same inductive bias, and this helped form the basis of my hypothesis about how convolutions don't work for language modeling or more general "discrete data" that has variable spacing. See the Aside of my [LINK TO PREVIOUS BLOG] for a bit more discussion.)
+(And moreover, I realized that this is essentially the same as convolutions, or at least has the same inductive bias, and this helped form the basis of my hypothesis about how convolutions don't work for language modeling and more general "discrete data" that has variable spacing. See the Aside of my [LINK TO PREVIOUS BLOG] for a bit more discussion.)
 
 To be honest, I don't really understand how so many papers on this U-Net-like strategy have been published for language modeling.
 I'm pretty skeptical that they work at all, as has also been shown in ablations by follow-up works on byte-level language modeling like [SpaceByte]() and [BLT]() CITE.
@@ -127,12 +127,12 @@ Instead, I realized that S4 and U-Nets (and convolutions in general) have a grea
 So [Karan](https://www.linkedin.com/in/krandiash/) took this autoregressive U-Net backbone with S4 layers and applied it to modeling/generating raw audio waveforms,
 where [it worked really well](https://arxiv.org/abs/2202.09729) <d-cite key="goel2022raw"></d-cite>.<d-footnote> I'm still proud of the method name and title, my most important contribution to this paper 😁</d-footnote>
 
-## A Differentiable Chunking Module?
+## A Differentiable Chunking Mechanism?
 
 Around 2022-2023, I was idly thinking about hierarchies in the back of my mind, and the way I formulated the goal was something like this.
 
 ### Attention as a primitive
-To me self-attention could be phrased as: A simple, differentiable module that captures the "primitive" of forming *dense connections* and building *functions on sets*.
+To me the self-attention mechanism could be phrased as: A simple module that captures the "primitive" of forming *dense connections* and building *functions on sets*.
 What makes it powerful is that it feels simple and foundational; capturing some fundamental transformation in a simple differentiable way that allows it to be scaled.
 
 My research is always after these **primitives**: lower-level building blocks that capture fundamental properties and transformations, and can be flexibly applied and scaled.
@@ -140,7 +140,7 @@ My work on state space models, for example, is really about fleshing out the pri
 (It's probably not a very well-known fact that my academic job talk was not about SSMs per se; it was called *New Structured Primitives for Machine Learning*!)
 
 ### Chunking as a primitive
-Back then, I thought that *chunking* was another such fundamental primitive.
+I thought that *chunking* was another such fundamental primitive.
 I thought: would it be possible to invent a simple differentiable building block that encapsulated the idea of chunking?
 Based on my experience with language modeling, and my overall priors about the world, I felt like this would be an incredibly powerful module that would allow models to organize raw data into more meaningful units.
 Surely this was a more appropriate way of modeling language and much more!
@@ -151,13 +151,13 @@ Back then, I had already formulated tokenization as a major problem that I wante
 The first reason is, as I appealed to in my [[previous blog]({% post_url 2025-07-08-tradeoffs %}#should-we-get-rid-of-tokenization)],
 an appeal to aesthetics and generality, which to me felt important enough.
 But the more specific reason was that I felt that the proper way
-to solve tokenization would be through creating a *differentiable chunking module*, which would be so much more powerful.
+to solve tokenization would be through creating a *differentiable chunking mechanism*, which would be so much more powerful.
 This is still the way that I like to pitch the problem now, as some researchers that have talked to me directly might know from the way I hinted at the H-Net project over the last few months.
 
 > Overcoming tokenization is **not about tokenizers**, but about **learning abstractions**. Discovering a tool that can do this will unlock new capabilities.
 
 ### Stuck.
-At this point, tokenization and chunking was one of my personal "holy grail" problems.
+At this point, tokenization and chunking became one of my personal "holy grail" problems.
 But how can one create such a differentiable chunking primitive?
 Grouping discrete units of data together is, of course, a discrete selection problem, which is generally very hard for differentiable optimization.
 Unfortunately, **I had absolutely no idea how to do this**.
@@ -176,7 +176,7 @@ Simply train a neural network to model the information content of the data (whic
 by grouping tokens together until the total negative log-likelihood of that chunk overflowed some threshold.
 This intuitively had a number of desirable properties, such as
 - if there were a lot of low-information tokens that are very easy to predict, then there probably isn't valuable meaning to them, so they should all be grouped together;
-- if the model is surprised by the next token (such as the beginning of a word, which generally has higher entropy), then the model would be forced to draw a boundary and start the next chunk, which ideally represented a new unit of meaning.
+- if the model is surprised by the next token (such as the beginning of a word, which generally has higher entropy and intrinsic information), then the model would be forced to draw a boundary and start the next chunk, which ideally represented a new unit of meaning.
 
 (Fast forwarding a bit: in H-Net, we don't *completely* understand where and why it decides to draw chunk boundaries, but we did notice a connection to this uncertainty principle; it tends to draw boundaries when surprised. But that's the subject for a future post.)
 
@@ -202,7 +202,7 @@ At the time, I actually basically didn't know at all how MoE worked, so I left S
 and he got the main ideas working relatively quickly.
 But there were a lot of really confusing training behaviors and instabilities, so he spent a long time building intuition and slowly improving the model.
 
-[TODO: add a whiteboard picture from Sukjun or an early PowerPoint diagram he drew]
+[TODO: add a whiteboard picture from June or an early PowerPoint diagram he drew]
 
 Incidentally, it's kind of interesting to me how obvious in hindsight, but not in foresight, the main idea is.
 As this project developed, and I told a bunch of people about it, their reaction usually went from "this differentiable selection problem seems impossible" to "oh yeah that might work" as soon as I mentioned the connection to MoE being another variant of a discrete-selection problem.
@@ -223,7 +223,7 @@ the main difference being the incorporation of a binary-valued *boundary predict
 {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/hourglass.png" caption="The Hourglass Transformer" %}
 
 Their motivation for how to overcome the discrete-choice problem was delegating to stochastic reparametrization techniques, namely the Gumbel-softmax trick CITE.
-In their paper, this fully end-to-end version didn't seem to work too well; it underperformed their alternative variants that relied on more heuristics and supervision and had stability issues.
+In their paper, this fully end-to-end version didn't seem to work too well; it had stability issues and underperformed their alternative variants that relied on more heuristics and supervision.
 Ultimately, I guess that DPT attempted to tackle this problem somewhat prematurely and important ideas weren't available yet (for example, the most popular [Switch Transformer](https://arxiv.org/abs/2101.03961) MoE method <d-cite key="fedus2022switch"></d-cite>  was pretty new and perhaps not as established yet).
 But I think this paper deserves more credit for at least making a real attempt at this problem!
 
@@ -253,8 +253,6 @@ So we didn't go with it. Alas 🥲
 (I still liked the H-Net name, so we kept it and later "backronymed" it to Hierarchical Network. In my head I still like the name H-Net for this Hourglass connection though.)
 {% enddetails %}
 
-<span style="color:blue">Is the tone here appropriate? I want to point out limitations and differentiate us in an honest way without looking disparaging of prior work or sounding defensive.</span>
-
 ### BLT
 
 By December, we had made a lot of progress and pretty much had the main architecture done (in particular, Sukjun had come up with the *smoothing module* which at the time we were calling the "EMA detokenizer"; as we show in the paper's ablations, this was one of the most important new techniques introduced.)
@@ -262,7 +260,7 @@ By December, we had made a lot of progress and pretty much had the main architec
 At this point, the [Byte Latent Transformer (BLT)](https://arxiv.org/abs/2412.09871) <d-cite key="pagnoni2024byte"></d-cite> paper came out, which made a big splash for claiming to solve tokenization end-to-end, through a similar hierarchical architecture using an entropy-based segmentation rule.
 (Actually, DPT above already proposed similar entropy heuristics, but didn't execute it as well.)
 I think the terminology is a little confusing because they indeed built a model operating "end-to-end" on bytes, but to me, the crux of the problem is *learning the dynamic boundaries* jointly with the model itself.
-This is not possible (at least not obviously) with the entropy heuristic and is the main reason [why we didn't explore this approach](#information-based-chunking).
+This is not possible (at least not obviously) with the entropy heuristic and is the main reason why we didn't explore this approach.
 In the H-Net paper, we specifically use "end-to-end" to refer to this stronger definition.
 Still, it was gratifying to see that my idea to use information-based chunking heuristics does (somewhat) work!
 
@@ -276,8 +274,8 @@ In BLT, the quantity used is the *conditional entropy* $H(x_t | x_0, \ldots, x_{
 The intuition in both is that segmentations should happen if the model is "surprised" by the next token.
 But surprise is better measured by the former quantity, not the latter.
 A concrete example is any conditional distribution that puts most of its mass on one vocab word $w$;
-this conditional distribution would have very low entropy and so the conditional entropy heuristic would create a new chunk.
-But in the event that the actual token that appears is a different one $w' \neq w$,
+this conditional distribution would have very low entropy and so the conditional entropy heuristic would never create a new chunk.
+But in the event that the actual token that appears is a different word $w'$,
 the model should be *very* surprised and draw a boundary in the rare case this happens.
 The negative log-likelihood captures this actual information content.
 
@@ -287,42 +285,32 @@ Maybe I'm missing something, or for some reason empirically it just works better
 
 After BLT came out, we had the thought to just clean up our (pretty reasonable already at the time) results and put out a pre-print quickly. But we decided to follow our principles: put our heads down and keep working in the direction we believe in, and wait to put something out when it was done in the ideal way we wanted, instead of worrying about community perception.
 
+<span style="color:blue">Is the tone here appropriate? I want to point out limitations and differentiate us in an honest way without looking disparaging of prior work or sounding defensive.</span>
+
 
 ## A World of Improvements
 
 I think the architecture has been relatively stable since early 2025, but we spent a long time trying to understand and simplify every part of it.
 For example,
-- **Architecture components**: our final architecture included post-norm layers at the end of every sub-network, as well as linear projections on the residual connection (Section REF). We spent a long time trying to remove these since I felt like they were non-standard techniques (most U-Nets don't have these) that complicated the model. But in the end, they seem very useful---maybe essential---and we kept them.
+- **Architecture components**: our final architecture included post-norm layers at the end of every sub-network, as well as linear projections on the residual connection. We spent a long time trying to remove these since I felt like they were non-standard techniques (most U-Nets don't have these) that complicated the model. But in the end, they seem very useful---maybe essential---and we kept them.
 - **Sparsity auxiliary loss**: Our auxiliary loss targets a specific down-sampling ratio (Section 2.3 of the paper). This seems a little artificial to me and introduces an annoying new hyperparameter (thankfully, the only one!). I felt like it would be cleaner to simply impose a "sparsity loss" that encouraged higher compression rates (it would be counter-balanced by the main loss function which encourages more compute, hence lower compression rates). We found some things that sort of worked but it didn't seem as consistent, so for this version of the H-Net we kept the targeted loss.
 - **Chunking mechanisms**: We tried so many different variations of the routing module, upsampling step, downsampling step, smoothing module, and every other component. Sukjun's PowerPoint deck of ideas and variations has hundreds of slides, and we were only able to report a very small subset of ablations in the paper of things we did.
-- **Layer allocation**: Normal LLM scaling laws might be concerned with how to scale the width and depth of the model as the parameter count grows. But here, there are so many more choices for how many layers to put in each sub-network and how wide to make them and so on. Beyond that, the question of which layers to use (e.g. Transformer vs. Mamba) in each network is also not obvious, and required tons of experiments to understand (and I'm still not sure we really have a clear grasp of how they predictably affect performance).
+- **Layer allocation**: Normal LLM scaling laws might be concerned with how to scale the width and depth of the model as the parameter count grows. But here, there are so many more choices for how many layers to put in each sub-network and how wide to make them and so on. Beyond that, the question of which layers to use (e.g. Transformer vs. Mamba) in each network is also not obvious, and required tons of experiments to understand (and I'm still not sure we have a completely clear grasp of how they predictably affect performance).
 
 Although our final (current) design has a lot of moving parts, they all had concrete motivations,
 and are as simple as we could make it without sacrificing stability or performance.
 
 {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/tuning.png" caption="A random slide from the deck of ideas involving multiple residual connections and extra stages/sub-networks, which remained as flags in the internal code for a long time." %}
 
-I haven't been able to run experiments personally in a while, and it was like watching an artist to see Sukjun improve the architecture steadily over time with multiple creative and essential ideas.
+I haven't been able to run experiments personally in a while, and it was like watching an artist work to see Sukjun improve the architecture steadily over time with multiple creative and essential ideas -- if it isn't clear, he has by far the best intuition for everything related to H-Nets.
 I have to say that this was one of the most difficult empirical projects I've witnessed (and I think I'm somewhat decent at creating architectures 👀).
-Normally when tuning models, one hopes that different axes of variation act somewhat independently so they can be ablated in isolation and we can perform a "coordinate descent in hyperparameter space".
+Normally when tuning models, one hopes that different axes of variation act somewhat independently so they can be ablated in isolation and we can perform a "coordinate descent in design space".
 But somehow for this architecture, it felt like there were 12 different axes that were all critical and that *all had to interact together in exactly the right way*.
 There were so many times when we thought that option "A" was better than "B",
 before changing some other design decisions and flip-flopping to B,
 before changing even more things and going back to A. And this happened with every axis of variation.
 Even after we had all the main ingredients, it was really difficult to get them to interact together seamlessly.
 
-[//]: # (If it isn't clear, I didn't do any of this; Sukjun is an amazing empiricist and has by far the best intuition for everything related to H-Nets.)
-
-<span style="color:blue">AG: Is this section interesting at all, or is it too much? I guess I'm maybe trying to convey a few things: (i) There were so many more things behind the scenes which is why it took a long time, but the main model was done a lot earlier and independently of related work (ii) Conveying the impression of how difficult it is. And why it looks complicated, but everything is necessary.</span>
-
-We also spent a lot of effort re-running baselines and trying to make sure our recipe was solid and the comparisons were fair.
-For example, at the last second we realized that our "space-delimiter baseline" didn't incorporate all the new techniques we developed for H-Net, such as the learning rate multipliers.
-It was tricky because we wanted to call this baseline "SpaceByte++" but didn't know how many of our improvements to give it.
-We eventually gave it all our architecture improvements which made it incredibly strong and renamed it to H-Net (spaces), so that we could directly compare the chunking mechanism in isolation, the most important factor of variation.
-
-
-
-<span style="color:blue">AG: Hmm, wrote this in a stream of thought but feels like it's excessive information?</span>
 
 ## Tradeoffs of SSMs and Transformers
 
@@ -339,7 +327,7 @@ The idea is that one should be able to train some lightweight encoder and decode
 This should be able to compress and strip away the noise tokens before feeding it to a main network that operates just over the meaningful tokens.
 
 Can the H-Net actually solve this in practice? I don't know, maybe some more work would need to be done.
-I was more interested in the litmus test as a thought experiment to guide architecture design, not necessarily as an actual synthetic.
+I was more interested in the litmus test as a thought experiment to guide architecture design, not necessarily as an actual synthetic task.
 I did hypothesize though that something that could theoretically solve the litmus test might be better at working with less clean data,
 but I'd say I don't have particularly high confidence in this hypothesis (I really don't know).
 
@@ -370,11 +358,11 @@ After all, it's just a generic sequence model architecture that can be applied o
 In particular, let's apply it to data that's already BPE-tokenized.
 
 1. If the first hypothesis holds, then we would expect Mamba to not help in the encoder/decoder,
-since (as mentioned above) they have similar performance on standard tokenized language modeling.
+since (as mentioned above) they have similar performance to Transformers on standard tokenized language modeling.
 2. If the second hypothesis holds, then we would expect that encoders/decoders using some Mamba layers to be better than
 pure Transformer layers.
 
-{% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/abl_enc_dec_combination_BPE.png" caption="A 1-stage H-Net trained on top of standard BPE-tokenized inputs, with T2M2-M2T2 for example denoting 2 Transformer layers and 2 Mamba layers in the encoder (and the reverse in the decoder). Note that Transformer layers are 2x the size of Mamba layers here." %}
+{% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/abl_enc_dec_combination_BPE.png" caption="A 1-stage H-Net trained on top of standard BPE-tokenized inputs, with T2M2-M2T2 for example denoting 2 Transformer layers and 2 Mamba layers in the encoder (and the reverse in the decoder). Note that Transformer layers are 2x the size of Mamba layers here, so everything is parameter/compute matched." %}
 
 This figure shows that it's indeed the second hypothesis that holds. This is really interesting and to me provides serious evidence that SSMs really are doing something interesting that other models can't do, and that **perhaps compression *is* fundamental to intelligence**.
 
@@ -389,8 +377,8 @@ although this is only a subset of the wide range of follow-up directions that I 
 One question that I expect we'll get is: do H-Nets **actually scale better**?
 In the paper, we showed training loss curves, where they display a striking trend of seeming to scale better with more data.
 We use these as proxies for a qualitative assessment of their scaling behavior, which I do believe is valuable (a justification is in the Discussion section of the paper).
-I also actually believe that **H-Nets will warp the scaling law exponent**.
-However, these aren't formal scaling laws.
+I also actually believe that **H-Nets will significantly shift the scaling law curve**.
+However, what we did aren't formal scaling laws.
 
 Why didn't we do those? Well, I guess the main reason is limited compute and more so the [sheer difficulty](#a-world-of-improvements) of developing this model,
 which is where all our resources were invested.
